--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 				<p>In caso di pioggia o minaccia di pioggia il ristorante è chiuso.</p>
 				<p>Per prenotazioni puoi scriverci su Messenger indicando numero di persone giorno e orario. Ti risponderemo appena possibile.</p>
 				<span class="hide-for-small extra-space"><a role="button" href="https://m.me/cavecchiabeerstrot" class="button left"><i class="fab fa-facebook-messenger"></i>Richiedi Prenotazione</a></span>
-                <span class="show-for-small extra-space"><a role="button" href="https://m.me/cavecchiabeerstrot" class="button small right extra-space-from-tabs"><i class="fab fa-facebook-messenger"></i>Richiedi Prenotazione</a></span>
+                <span class="show-for-small extra-space"><a role="button" href="https://m.me/cavecchiabeerstrot" class="button right extra-space-from-tabs"><i class="fab fa-facebook-messenger"></i>Richiedi Prenotazione</a></span>
 			</div>  -->
 			<div class="medium-6 large-6 columns">
 				<h2>Ristorante</h2>
@@ -139,7 +139,7 @@
 				<p>In caso di pioggia o minaccia di pioggia il ristorante è chiuso.</p>
 				<p>Per prenotazioni puoi scriverci su Messenger indicando numero di persone giorno e orario. Ti risponderemo appena possibile.</p>
 				<span class="hide-for-small extra-space"><a role="button" href="https://m.me/cavecchiabeerstrot" class="button left"><i class="fab fa-facebook-messenger"></i>Richiedi Prenotazione</a></span>
-                <span class="show-for-small extra-space"><a role="button" href="https://m.me/cavecchiabeerstrot" class="button small right extra-space-from-tabs"><i class="fab fa-facebook-messenger"></i>Richiedi Prenotazione</a></span>
+                <span class="show-for-small extra-space"><a role="button" href="https://m.me/cavecchiabeerstrot" class="button right extra-space-from-tabs"><i class="fab fa-facebook-messenger"></i>Richiedi Prenotazione</a></span>
 			</div>
 			<div class="medium-6 large-6 columns">
 				<span class="show-for-small extra-space"></span>
