--- a/prenota/consulta.html
+++ b/prenota/consulta.html
@@ -78,7 +78,7 @@
 
                 <fieldset>
                      <legend>Dettagli della prenotazione</legend>
-                        <ul class="no-bullet">
+                        <ul class="no-bullet" id="infoList">
                           <li><strong>Nome: </strong><span id="name"></span></li>
                           <li><strong>Telefono: </strong><span id="telephone"></span></li>
                             <li><strong>Email: </strong><span id="email"></span></li>
@@ -185,5 +185,17 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/foundation/5.5.3/js/foundation.min.js"></script>
     <script src="https://www.beerstrot.it/js/app.min.js"></script>
     <script src="../js/prenota.js"></script>
+<div id="myModal" style="border:4px lightgrey solid" class="reveal-modal" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
+  <p class="lead" id="modalLead">Cancella la prenotazione?</p>
+    <p id="modalText">I'm a cool paragraph that lives inside of an even cooler modal. Wins!</p>
+
+        <div class="row extra-space" style="margin-bottom:5%">
+            <div class="small-12 medium-6 large-6 columns">
+                <a role="button" id="no" class="button right">No</a>
+                <a role="button" id="yes" class="button left">Sì</a>
+            </div>
+        </div>
+  <a class="close-reveal-modal" aria-label="Close" id="close-modal">&#215;</a>
+</div>
 </body>
 </html>
