--- a/prenota/index2.html
+++ b/prenota/index2.html
@@ -190,7 +190,7 @@
         </div>
         <div class="row">
             <div class="small-12 medium-6 columns end">
-                <input id="privacy" type="checkbox" checked><label for="checkbox2"> Accetto la<a href="#"> privacy</a></label>
+                <input id="privacy" type="checkbox" checked><label for="checkbox2"> Accetto la<a id="privacy"> privacy</a></label>
             </div>
         </div>
         <div class="row">
