--- a/prenota/index2.html
+++ b/prenota/index2.html
@@ -163,7 +163,7 @@
         </div>
         <div class="row">
             <div class="small-9 medium-5 columns end">
-                <input id="cani" type="checkbox"><label for="checkbox1">Ho uno o più cani</label>
+                <input id="cani" type="checkbox"><label for="cani">Ho uno o più cani</label>
             </div>
             <span class=""><hr></span>
         </div>
@@ -192,7 +192,7 @@
         </div>
         <div class="row">
             <div class="small-12 medium-6 columns end">
-                <input id="privacy" type="checkbox" checked><label for="checkbox2"> Accetto la<a id="privacy"> privacy</a></label>
+                <input id="privacy" type="checkbox" checked><label for="privacy"> Accetto la<a id="privacy"> privacy</a></label>
             </div>
         </div>
         <div class="row">
@@ -204,7 +204,6 @@
             </div>
         </div>
     </div>
-
 <!-- inizio footer -->
     <footer class="panel-footer">
         <div class="row">
@@ -294,25 +293,4 @@
   <a class="close-reveal-modal" aria-label="Close">&#215;</a>
 </div>
 </body>
-
-
-<!--
-creato css in custom.scss
-<style>
-#loading {
-  display: none;
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 100;
-  width: 100vw;
-  height: 100vh;
-  background-color: rgba(192, 192, 192, 0.9);
-  background-image: url(../asset/img/loading.gif);
-  background-repeat: no-repeat;
-  background-position: center;
-  text-align: center;
-  font-size: 24px;
-}
-</style> -->
 </html>
