--- a/prenota/index2.html
+++ b/prenota/index2.html
@@ -287,10 +287,17 @@
     <script src="https://www.beerstrot.it/js/app.min.js"></script>
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-datetimepicker/2.5.20/jquery.datetimepicker.css"/ >
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-datetimepicker/2.5.20/jquery.datetimepicker.full.min.js"></script>
-    <script src="https://www.beerstrot.it/js/prenota.js"></script>
-<div id="myModal" style="border:4px lightgrey solid" class="reveal-modal" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
+    <script src="../js/prenota2.js"></script>
+<div id="myModal" class="reveal-modal" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
+  <h2 id="modalTitle">Il server non è raggiungibile</h2>
+  <p class="lead" id="modalLead">Your couch.  It is mine.</p>
+  <a class="close-reveal-modal" ariia-label="Close">&#215;</a>
+</div>
+
+
+<!-- <div id="myModal" style="border:4px lightgrey solid" class="reveal-modal" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
   <p class="lead" id="modalLead">Your couch.  It is mine.</p>
   <a class="close-reveal-modal" aria-label="Close">&#215;</a>
-</div>
+</div> -->
 </body>
 </html>
