fixed wording on modal

--- a/prenota/index2.html
+++ b/prenota/index2.html
@@ -288,10 +288,11 @@
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-datetimepicker/2.5.20/jquery.datetimepicker.css"/ >
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-datetimepicker/2.5.20/jquery.datetimepicker.full.min.js"></script>
     <script src="../js/prenota2.js"></script>
-<div id="myModal" class="reveal-modal" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
-  <h2 id="modalTitle">Il server non è raggiungibile</h2>
-  <p class="lead" id="modalLead">Your couch.  It is mine.</p>
-  <a class="close-reveal-modal" ariia-label="Close">&#215;</a>
+<div id="myModal" class="reveal-modal medium" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
+    <h1></h1>
+    <h2 id="modalTitle" class="extra-space-modal">Server non raggiungibile</h2>
+    <p class="lead" id="modalLead"></p>
+    <a class="close-reveal-modal" aria-label="Close">&#215;</a>
 </div>
 
 
