--- a/prenota/index2.html
+++ b/prenota/index2.html
@@ -140,7 +140,7 @@
                 </ul>
                 <p>Turno: orario d'arrivo-orario in cui bisogna lasciare il tavolo</p>
             </div>
-            <span class="extra-space"><hr></span>
+            <span class=""><hr></span>
         </div>
         <div class="row">
             <div class="small-12 medium-6 columns end">
