--- a/prenota/consulta.html
+++ b/prenota/consulta.html
@@ -187,7 +187,7 @@
     <script src="../js/prenota.js"></script>
 <div id="myModal" style="border:4px lightgrey solid" class="reveal-modal" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
   <p class="lead" id="modalLead">Cancella la prenotazione?</p>
-    <p id="modalText">I'm a cool paragraph that lives inside of an even cooler modal. Wins!</p>
+    <p id="modalText"></p>
 
         <div class="row extra-space" style="margin-bottom:5%">
             <div class="small-12 medium-6 large-6 columns">
