--- a/prenota/index2.html
+++ b/prenota/index2.html
@@ -122,7 +122,7 @@
                         <option value="">Seleziona Numero</option>
                     </select>
                 </label>
-                <small class="error">Campo obbligatorio</small>
+                <small class="error" id="cerca">Campo obbligatorio</small>
             </div>
         </div>
         <div class="row">
