removing error when privacy is checked

--- a/prenota/index.html
+++ b/prenota/index.html
@@ -217,7 +217,7 @@
         </div>
         <div class="row">
             <div class="small-12 medium-6 columns end">
-                <input id="privacy" type="checkbox"><label for="checkbox2"> Accetto la<a id="privacy2"> privacy</a></label>
+                <input id="privacy" type="checkbox"><label for="checkbox2"> Accetto la<a id="privacy2" class="error"> privacy</a></label>
             </div>
         </div>
         <div class="row">
