--- a/prenota/index.html
+++ b/prenota/index.html
@@ -131,7 +131,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="small-6 medium-3 columns">
+            <div class="small-6 medium-3 columns ">
                 <label>Quale giorno*
                     <input tabindex="5" id="from" type="text" name="LNAME" class="required error" placeholder="Seleziona Giorno" readonly/>
                 </label>
@@ -146,7 +146,7 @@
                 <small class="error error1" id="quantity1">Campo obbligatorio</small>
             </div>
         </div>
-        <div class="row">
+        <div class="row extra-space-hero">
             <div class="small-12 medium-6 columns end">
                 <label>Quale turno*
                 </label>
@@ -201,13 +201,13 @@
                 </label>
                 <small class="error error1" id="surname1">Campo obbligatorio</small>
             </div>
-            <div class="small-12  medium-5 columns">
+            <div class="small-12  medium-5 columns extra-space-hero">
                 <label>Email*
                     <input type="email" class="required email error" id="email" placeholder="esempio@esempio.it" />
                   </label>
                   <small class="error error1" id="email1">Campo obbligatorio</small>
             </div>
-            <div class="small-6  medium-3 columns end">
+            <div class="small-6  medium-3 columns end extra-space-hero">
                 <label>Telefono*
                     <input type="tel" class="required error" id="telephone" placeholder="3332221111" />
                 </label>
