--- a/prenota/index2.html
+++ b/prenota/index2.html
@@ -192,7 +192,8 @@
         </div>
         <div class="row">
             <div class="small-12 medium-6 columns end">
-                <input id="privacy" type="checkbox" checked><label for="privacy"> Accetto la<a id="privacy"> privacy</a></label>
+                <input id="privacy" type="checkbox" class="error"><label for="privacy"> Accetto la<a id="privacy"> privacy</a></label>
+                <small class="error">accettazone della privacy obbligatoria</small>
             </div>
         </div>
         <div class="row">
