--- a/prenota/index.html
+++ b/prenota/index.html
@@ -35,7 +35,7 @@
         src="https://www.facebook.com/tr?id=770709373057085&ev=PageView&noscript=1"/>
     </noscript>
 <!-- End Facebook Pixel Code -->
-<style type="text/css">
+<!-- <style type="text/css">
 .error1 {
   display: none!important;
 }
@@ -54,7 +54,7 @@
   text-align: center;
   font-size: 24px;
 }
-</style>
+</style> -->
 </head>
 <body>
    <nav class="top-bar" data-topbar role="navigation">
