--- a/index.html
+++ b/index.html
@@ -43,18 +43,6 @@
 		src="https://www.facebook.com/tr?id=770709373057085&ev=PageView&noscript=1"/>
 	</noscript>
 <!-- End Facebook Pixel Code -->
-
-<!-- Alert popup -->
-
-<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-<script>
-    $("document").ready( function () {
-        alert("Oggi chiusi per pioggia");
-    });
-</script> -->
-
-<!-- End Alert popup -->
-
 </head>
 <body>
 <!-- navbar con hamburger -->
@@ -71,15 +59,13 @@
 		<section class="top-bar-section">
 			<ul class="right">
 				<li class="divider"></li>
+				<li><a href="https://www.beerstrot.it/prenota/">Prenota</a></li>
+				<li class="divider"></li>
 				<li><a href="https://www.beerstrot.it/menu/">Menù</a></li>
 				<li class="divider"></li>
 				<li><a href="https://www.beerstrot.it/asporto/">Asporto</a></li>
 				<li class="divider"></li>
-				<li><a href="https://www.beerstrot.it/social/">Social</a></li>
-				<li class="divider"></li>
 				<li><a href="https://www.beerstrot.it/contatti/">Contatti</a></li>
-				<li class="divider"></li>
-				<li><a href="https://www.beerstrot.it/blog/">Blog</a></li>
 			</ul>
 		</section>
 	</nav>
@@ -108,6 +94,7 @@
 					<p>In caso di pioggia o minaccia di pioggia il ristorante è chiuso e avviseremo tutti coloro che hanno prenotato della non apertura.</p>
 				<p>Non è consentito portare dolci, spumanti e simili dall'esterno.</p>
 				<p>E' consentito fumare solo nell'area preposta lontano dai tavoli.</p>
+				<span class="extra-space"><a role="button" href="https://www.beerstrot.it/prenota" class="button right">Riserva un Tavolo</a></span>
 			</div>
 		</div>
 	</div>
@@ -125,29 +112,22 @@
 			</div>
 		</div>
 		<div class="row">
-			<!-- <div class="medium-6 large-6 columns">
-				<h2>Ristorante <small>(Prenotazione obbligatoria)</small></h2>
-				<p><strong>Aperto tutti i giorni, solo all'esterno</strong>.<br>Dalle <strong>19:00</strong> alle <strong>23:00</strong>.</p>
-				<p>In caso di pioggia o minaccia di pioggia il ristorante è chiuso.</p>
-				<p>Per prenotazioni puoi scriverci su Messenger indicando numero di persone giorno e orario. Ti risponderemo appena possibile.</p>
-				<span class="hide-for-small extra-space"><a role="button" href="https://m.me/cavecchiabeerstrot" class="button left"><i class="fab fa-facebook-messenger"></i>Richiedi Prenotazione</a></span>
-                <span class="show-for-small extra-space"><a role="button" href="https://m.me/cavecchiabeerstrot" class="button right extra-space-from-tabs"><i class="fab fa-facebook-messenger"></i>Richiedi Prenotazione</a></span>
-			</div>  -->
 			<div class="medium-6 large-6 columns">
 				<h2>Ristorante</h2>
 				<p><strong>Aperto tutti i giorni, solo all'esterno</strong>.<br>Dalle <strong>19:00</strong> alle <strong>23:00</strong>.</p>
 				<p>In caso di pioggia o minaccia di pioggia il ristorante è chiuso.</p>
-				<p>Per prenotazioni puoi scriverci su Messenger indicando numero di persone giorno e orario. Ti risponderemo appena possibile.</p>
-				<span class="hide-for-small extra-space"><a role="button" href="https://m.me/cavecchiabeerstrot" class="button left"><i class="fab fa-facebook-messenger"></i>Richiedi Prenotazione</a></span>
-                <span class="show-for-small extra-space"><a role="button" href="https://m.me/cavecchiabeerstrot" class="button right extra-space-from-tabs"><i class="fab fa-facebook-messenger"></i>Richiedi Prenotazione</a></span>
+				<p>Riserva un tavolo direttamente online. <br>  <span class="subheader"><small>Nota bene: per gruppi di 13 persone o più chiama il numero <a role="button" href="tel:+390718853384"> 071 8853384</a></small></span></p>
+				<span class="extra-space"><a role="button" href="https://www.beerstrot.it/prenota" class="button right">Riserva un Tavolo</a></span>
 			</div>
 			<div class="medium-6 large-6 columns">
-				<span class="show-for-small extra-space"></span>
-				<h2>Asporto</h2>
+				<span class="show-for-small extra-space-footer"><h2>Asporto</h2></span>
+				<span class="hide-for-small"><h2>Asporto</h2></span>
 				<p><strong>Tutti i giorni</strong>.<br>Dalle <strong>19:00</strong> alle <strong>22:00</strong>.</p>
 				<p>In caso di pioggia o minaccia di pioggia il ristorante è chiuso anche per gli asporti.</p>
-				<span class="hide-for-small extra-spac"><a role="button" href="tel:+390718853384" class="button right extra-space-aside-tab-immagini"><i class="fa fa-phone"></i> 071 8853384</a></span>
-                		<span class="show-for-small extra-space"><a role="button" href="tel:+390718853384" class="button right extra-space-aside-tab-immagini"><i class="fa fa-phone"></i> Chiama</a></span>
+				<span class="hide-for-small extra-space"><a role="button" href="tel:+390718853384" class="button right"><i class="fa fa-phone"></i> 071 8853384</a></span>
+                <span class="show-for-small extra-space"><a role="button" href="tel:+390718853384" class="button right"><i class="fa fa-phone"></i> Chiama</a></span>
+				<!-- <p>Per ordinare un asporta chiamaci al numero <a role="button" href="tel:+390718853384"> 071 8853384</a></p> -->
+
 			</div>
 			<!-- <div class="medium-6 large-6 columns">
 				<span class="show-for-small extra-space"></span>
@@ -177,6 +157,7 @@
 			</div>
 		</div>
 	</div>
+
 	<div class="panel-home-n">
 		<div class="row">
 			<div class="medium-6 large-6 columns">
@@ -197,55 +178,20 @@
 	<div class="panel-home-2n">
 		<div class="row">
 			<div class="medium-6 large-6 medium-offset-6 large-offset-6 columns">
-				<h1>Social</h1>
-			</div>
-		</div>
-		<div class="row">
-			<div class="medium-6 medium-push-6 large-6 large-push-6 columns">
-				<a role="button" href="https://www.beerstrot.it/social/"><img src="https://www.beerstrot.it/asset/img/medium/social.jpg" alt="Scopri il Lato Social" class="extra-space-image-tab-home"></a>
-			</div>
-			<div class="medium-6 large-6 medium-pull-6 large-pull-6 columns">
-				<p>Sei social?</p>
-				<p>Dillo con un hashtag: pubblica le tue foto e video con <code>#cavecchiabeerstrot</code>.</p>
-				<!-- <p>Cosa dice il web di Ca' Vecchia Beerstrot: recensioni e commenti.</p> -->
-				<a role="button" href="https://www.beerstrot.it/social/">Guarda le Foto e i Post &rarr;</a>
-			</div>
-		</div>
-	</div>
-	<div class="panel-home-n">
-		<div class="row">
-			<div class="medium-6 large-6 columns">
 				<h1>Contatti</h1>
 			</div>
 		</div>
 		<div class="row">
-			<div class="medium-6 large-6 columns">
+			<div class="medium-6 medium-push-6 large-6 large-push-6 columns">
 				<div class="flex-video widescreen vimeo extra-space-video">
 					<a role="button" href="https://www.beerstrot.it/video/">
-						<!-- <iframe width="1280" height="720" src="https://www.youtube.com/embed/2_gbVco836c?rel=0" frameborder="0" allowfullscreen></iframe> -->
 						<iframe width="1280" height="720" src="https://www.youtube.com/embed/jVDlGrvFMyw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 					</a>
 				</div>
 			</div>
-			<div class="medium-6 large-6 columns">
+			<div class="medium-6 large-6 medium-pull-6 large-pull-6 columns">
 				<p>Come raggiungerci, contattarci o prenotare un tavolo.</p>
 				<a role="button" href="https://www.beerstrot.it/contatti/">Contattaci &rarr;</a>
-			</div>
-		</div>
-	</div>
-	<div class="panel-home-2n">
-		<div class="row">
-			<div class="medium-6 large-6 medium-offset-6 large-offset-6 columns">
-				<h1>Blog</h1>
-			</div>
-		</div>
-		<div class="row">
-			<div class="medium-6 medium-push-6 large-6 large-push-6 columns">
-				<a role="button" href="https://www.beerstrot.it/blog/"><img src="https://www.beerstrot.it/asset/img/medium/quattro-birre-artigianali-americane.jpg" alt="Birre in Love" class="extra-space-image-tab-home"></a>
-			</div>
-			<div class="medium-6 large-6 medium-pull-6 large-pull-6 columns">
-				<p>Tutte le novità, nuove birre, nuovi cibi e abbinamenti, curiosità sugli eventi e su cosa bolle in pentola&hellip;</p>
-				<a role="button" href="https://www.beerstrot.it/blog/">Vai alle Notizie e alle Novità &rarr;</a>
 			</div>
 		</div>
 	</div>
@@ -255,10 +201,10 @@
 			<div class="large-12 columns">
 				<ul class="small-block-grid-2 medium-block-grid-4 large-block-grid-4">
 					<li>
-						<h4 class="subheader">Prenota</h4>
-						<p><a href="tel:+390718853384"><i class="fa fa-phone"></i><span itemprop="telephone"> 071 8853384</span></a></p>
-						<p><a href="https://m.me/cavecchiabeerstrot"><i class="fab fa-facebook-messenger"></i>Richiedi Prenotazione</a></p>
-					</li>
+                        <h4 class="subheader">Contatti</h4>
+                        <p><a href="https://www.beerstrot.it/prenota/">Riserva un Tavolo</a></p>
+                        <p><a href="tel:+390718853384"><i class="fa fa-phone"></i><span itemprop="telephone"> 071 8853384</span></a></p>
+                    </li>
 					<!-- <li>
                        	<h4 class="subheader">Orari</h4>
                        	<meta itemprop="openingHours" content="Th, Fr, Sa, Su 19:00-23:00">
@@ -315,11 +261,10 @@
 		<div class="small-12 medium-12 large-12 columns">
 			<p class="links">
 				<a href="https://www.beerstrot.it">Home</a>
+				<a href="https://www.beerstrot.it/prenota/">Prenota</a>
 				<a href="https://www.beerstrot.it/menu/">Menù</a>
 				<a href="https://www.beerstrot.it/asporto/">Asporto</a>
-				<a href="https://www.beerstrot.it/social/">Social</a>
 				<a href="https://www.beerstrot.it/contatti/">Contatti</a>
-				<a href="https://www.beerstrot.it/blog/">Blog</a>
 			</p>
 		</div>
 	</div>
@@ -327,14 +272,5 @@
 	<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 	<script src="//cdnjs.cloudflare.com/ajax/libs/foundation/5.5.3/js/foundation.min.js"></script>
 	<script src="https://www.beerstrot.it/js/app.min.js"></script>
-<!-- Alert popup -->
-
-	<!-- <script>
-		$(window).load(function() {
-      		alert("Oggi chiusi per pioggia.");
-		});
-	</script> -->
-
-<!-- End Alert popup -->
 </body>
 </html>
