--- a/prenota/consulta_no_cancellato.html
+++ b/prenota/consulta_no_cancellato.html
@@ -63,7 +63,7 @@
 <!-- fine navbar con hamburger -->
     <header class="row">
         <div class="medium-12 large-12 columns">
-            <h1>Prenotazione confermata. Grazie</h1>
+            <h1>Prenotazione non cancellata. Grazie</h1>
             <br>
         </div>
     </header>
@@ -94,8 +94,7 @@
                 </fieldset>
             </div>
             <div class="small-12 medium-12 columns">
-                <p>Se hai bisogno di modificare o cancellare la prenotazione, puoi sempre usare i link della vecchia email di conferma.</p>
-                <p>Nota bene: non riceverai una nuova email di conferma.</p>
+                <p>La prenotazione non è stata cancellata. <br>Se hai bisogno di modificare o cancellare la prenotazione, puoi sempre usare i link della vecchia email di conferma.</p>
             </div>
         </div>
     </div>
