--- a/prenota/index.html
+++ b/prenota/index.html
@@ -90,22 +90,22 @@
     </header>
     <div id="loading" hidden><br/><br/><div style="padding-top:25%">Ricerco disponibilità.</div></div>
     <div class="row" id="notesDiv" hidden>
-      <div class="columns small-12" id="innerNotesDiv_">
+      <div class="columns small-12" id="innerNotesDiv_" >
         <div>
           <input tabindex="5" id="from2" type="text" >
         </div>
       </div>
-      <div class="columns small-12" id="innerNotesDiv">
+      <div class="columns small-12" id="innerNotesDiv" style="overflow-x:auto;"">
       <table id="notesTable" style="margin-bottom:5%">
         <thead>
           <tr>
-            <th width="22%">Nome</th>
-            <th width="12%">Telefono</th>
-            <th width="12%">Email</th>
-            <th width="12%">Orario</th>
-            <th width="5%">Cani</th>
-            <th width="5%">Seggiolini</th>
-            <th width="12%">Notes</th>
+            <th >Nome</th>
+            <th >Telefono</th>
+            <th >Email</th>
+            <th >Orario</th>
+            <th >Cani</th>
+            <th >Seggiolini</th>
+            <th >Notes</th>
           </tr>
         </thead>
         <tbody id="notesTableBody" style="text-align:center;"></tbody>
@@ -314,7 +314,7 @@
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-datetimepicker/2.5.20/jquery.datetimepicker.css"/ >
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-datetimepicker/2.5.20/jquery.datetimepicker.full.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
-    <script src="https://www.beerstrot.it/js/prenota.min.js"></script>
+    <script src="../js/prenota.min.js"></script>
 <!-- <div id="myModal" style="border:4px lightgrey solid" class="reveal-modal" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
   <p class="lead" id="modalLead">Your couch.  It is mine.</p>
   <a class="close-reveal-modal" aria-label="Close">&#215;</a>
