--- a/prenota/index.html
+++ b/prenota/index.html
@@ -95,17 +95,17 @@
           <input tabindex="5" id="from2" type="text" >
         </div>
       </div>
-      <div class="columns small-12" id="innerNotesDiv" style="overflow-x:auto;"">
-      <table id="notesTable" style="margin-bottom:5%">
+      <div class="columns small-12" id="innerNotesDiv" style="overflow-x:auto;">
+      <table id="notesTable">
         <thead>
           <tr>
-            <th >Nome</th>
-            <th >Telefono</th>
-            <th >Email</th>
-            <th >Orario</th>
-            <th >Cani</th>
-            <th >Seggiolini</th>
-            <th >Notes</th>
+            <th>Nome</th>
+            <th>Telefono</th>
+            <th>Email</th>
+            <th>Orario</th>
+            <th>Cani</th>
+            <th>Seggioloni</th>
+            <th>Note</th>
           </tr>
         </thead>
         <tbody id="notesTableBody" style="text-align:center;"></tbody>
