fix timepicker position in notes

--- a/prenota/index.html
+++ b/prenota/index.html
@@ -90,12 +90,14 @@
     </header>
     <div id="loading" hidden><br/><br/><div style="padding-top:25%">Ricerco disponibilità.</div></div>
     <div class="row" id="notesDiv" hidden>
-      <div class="columns small-12" id="innerNotesDiv_" >
+      <div class="small-6 medium-4 columns" id="innerNotesDiv_" >
         <div>
-          <input tabindex="5" id="from2" type="text" >
+            <label>Quale giorno*
+                <input tabindex="5" id="from2" type="text">
+            </label>
         </div>
       </div>
-      <div class="columns small-12" id="innerNotesDiv" style="overflow-x:auto;">
+      <div class="small-12 medium-12 large-12 columns extra-space" id="innerNotesDiv" style="overflow-x:auto;">
       <table id="notesTable">
         <thead>
           <tr>
