--- a/prenota/index.html
+++ b/prenota/index.html
@@ -90,29 +90,29 @@
     </header>
     <div id="loading" hidden><br/><br/><div style="padding-top:25%">Ricerco disponibilità.</div></div>
     <div class="row" id="notesDiv" hidden>
-      <div class="small-6 medium-4 columns" id="innerNotesDiv_" >
-        <div>
-            <label>Quale giorno*
-                <input tabindex="5" id="from2" type="text">
-            </label>
+        <div class="small-6 medium-4 columns" id="innerNotesDiv_" >
+            <div>
+                <label>Seleziona giorno
+                    <input tabindex="5" id="from2" type="button extra-large">
+                </label>
+            </div>
         </div>
-      </div>
-      <div class="small-12 medium-12 large-12 columns extra-space" id="innerNotesDiv" style="overflow-x:auto;">
-      <table id="notesTable">
-        <thead>
-          <tr>
-            <th>Nome</th>
-            <th>Telefono</th>
-            <th>Email</th>
-            <th>Orario</th>
-            <th>Cani</th>
-            <th>Seggioloni</th>
-            <th>Note</th>
-          </tr>
-        </thead>
-        <tbody id="notesTableBody" style="text-align:center;"></tbody>
+    <div class="small-12 medium-12 large-12 columns extra-space" id="innerNotesDiv" style="overflow-x:auto;">
+        <table id="notesTable">
+            <thead>
+                <tr>
+                    <th>Nome</th>
+                    <th>Telefono</th>
+                    <th>Email</th>
+                    <th>Orario</th>
+                    <th>Cani</th>
+                    <th>Seggioloni</th>
+                    <th>Note</th>
+                </tr>
+            </thead>
+            <tbody id="notesTableBody" style="text-align:center;"></tbody>
       </table>
-      </div>
+    </div>
     </div>
     <div class="panel-home-2n" id="prenotaDiv" hidden>
       <div class="row">
