fix tables lines

--- a/prenota/index.html
+++ b/prenota/index.html
@@ -97,22 +97,22 @@
                 </label>
             </div>
         </div>
-    <div class="small-12 medium-12 large-12 columns extra-space" id="innerNotesDiv" style="overflow-x:auto;">
-        <table id="notesTable">
-            <thead>
-                <tr>
-                    <th>Nome</th>
-                    <th>Telefono</th>
-                    <th>Email</th>
-                    <th>Orario</th>
-                    <th>Cani</th>
-                    <th>Seggioloni</th>
-                    <th>Note</th>
-                </tr>
-            </thead>
-            <tbody id="notesTableBody" style="text-align:center;"></tbody>
-      </table>
-    </div>
+        <div class="small-12 medium-12 large-12 columns extra-space" id="innerNotesDiv" style="overflow-x:auto;">
+            <table id="notesTable">
+                <thead>
+                    <tr>
+                        <th>Nome</th>
+                        <th>Telefono</th>
+                        <th>Email</th>
+                        <th>Orario</th>
+                        <th>Cani</th>
+                        <th>Seggioloni</th>
+                        <th>Note</th>
+                    </tr>
+                </thead>
+                <tbody id="notesTableBody" style="text-align:center;"></tbody>
+            </table>
+        </div>
     </div>
     <div class="panel-home-2n" id="prenotaDiv" hidden>
       <div class="row">
@@ -316,7 +316,7 @@
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-datetimepicker/2.5.20/jquery.datetimepicker.css"/ >
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-datetimepicker/2.5.20/jquery.datetimepicker.full.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
-    <script src="https://www.beerstrot.it/js/prenota.min.js"></script>
+    <script src="../js/prenota.js"></script>
 <!-- <div id="myModal" style="border:4px lightgrey solid" class="reveal-modal" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
   <p class="lead" id="modalLead">Your couch.  It is mine.</p>
   <a class="close-reveal-modal" aria-label="Close">&#215;</a>
